[tool.poetry]
name = "n2t-legacy-logs"
version = "0.1.0"
description = "Parser for N2T legacy system logs"
authors = ["datadavev <605409+datadavev@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "n2t_legacy_logs"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
apachelogs = "^0.6.0"
IP2Location = "^8.9.0"
ua-parser = "^0.16.1"
click = "^8.1.3"
clickhouse-driver = "^0.2.4"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.5"
ipython = "^8.10.0"
matplotlib = "^3.6.1"
itables = "^1.3.0"
jupyter = "^1.0.0"
geopandas = "^0.11.1"
jupyter-cache = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
